--- a/src/app.postcss
+++ b/src/app.postcss
@@ -2,3 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind variants;
+
+.prose :is(h1, h2, h3, h4, h5, h6) {
+		color: var(--text-1);
+		margin-top: var(--size-8);
+		margin-bottom: var(--size-3);
+	}
