change heading theme

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -4,7 +4,8 @@
 @tailwind variants;
 
 .prose :is(h1, h2, h3, h4, h5, h6) {
-		color: black;
+		color: var(--theme-font-color-base);
+		font-weight: bold;
 		margin-top: var(--size-8);
 		margin-bottom: var(--size-8);
 	}
