fix weird div centering

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -39,3 +39,9 @@ pre.shiki.poimandres {
 	border-radius: 0px;
 }
 
+main {
+	position: absolute;
+    top:  5em;
+    left: 50%;
+    transform: translate(-50%, 0%);
+}
