nice centreing and gentle highlight of article

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -35,6 +35,19 @@
 		color: white;
 	}
 
+	
+.dark .content {
+	height: auto;
+	background-color: rgba(var(--color-surface-800) / 1);
+	margin-top: 1em;
+}
+
+.content {
+	background-color: rgba(var(--color-surface-200) / 1);
+	margin-top: 1em;
+}
+
+
 pre.shiki.poimandres {
 	border-radius: 0px;
 }
