--- a/src/app.postcss
+++ b/src/app.postcss
@@ -58,3 +58,9 @@ main {
     left: 50%;
     transform: translate(-50%, 0%);
 }
+
+@media only screen and (max-width: 620px) {
+	main {
+		width: 90vw;
+	}
+}
