formatting background and content fill

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,6 +3,12 @@
 @tailwind utilities;
 @tailwind variants;
 
+
+.prose {
+	color: var(--tw-prose-body);
+	max-width: 100ch;
+  }
+  
 .prose :is(h1, h2, h3, h4, h5, h6) {
 		color: var(--theme-font-color-base);
 		font-weight: bold;
@@ -38,7 +44,7 @@
 	
 .dark .content {
 	height: auto;
-	background-color: rgba(var(--color-surface-700) / 1);
+	background-color: rgba(var(--color-surface-600) / 1);
 	margin-top: 1em;
 }
 
@@ -47,6 +53,9 @@
 	margin-top: 1em;
 }
 
+.dark hr:not(.divider) {
+	border-color: rgb(var(--color-surface-400));
+  }
 
 pre.shiki.poimandres {
 	border-radius: 0px;
@@ -57,6 +66,7 @@ main {
     top:  5em;
     left: 50%;
     transform: translate(-50%, 0%);
+	width: 60vw;
 }
 
 @media only screen and (max-width: 620px) {
