add md plugins and ability to embed components into files

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -13,7 +13,7 @@
 		color: var(--theme-font-color-base);
 		font-weight: bold;
 		margin-top: var(--size-8);
-		margin-bottom: var(--size-8);
+		margin-bottom: 1em;
 	}
 
 .prose :is(p, a){
@@ -28,7 +28,7 @@
 
 .dark .prose :is(h1, h2, h3, h4, h5, h6) {
 		color: white;
-		margin-top: var(--size-8);
+		margin-top: 1em;
 		margin-bottom: var(--size-8);
 	}
 
