--- a/src/app.postcss
+++ b/src/app.postcss
@@ -69,6 +69,10 @@ main {
 	width: 60vw;
 }
 
+.you__tube {
+	margin: 2em auto;
+}
+
 @media only screen and (max-width: 620px) {
 	main {
 		width: 90vw;
