preload for rss and overflow for code

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -57,8 +57,9 @@
 	border-color: rgb(var(--color-surface-400));
   }
 
-pre.shiki.poimandres {
+pre.shiki.catppuccin-macchiato {
 	border-radius: 0px;
+	overflow: scroll;
 }
 
 main {
