add post order to rss, some css updates

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,7 +7,7 @@
 .prose {
 	color: var(--tw-prose-body);
 	max-width: 100ch;
-	padding-botton: 1em;
+	padding-bottom: 10px;
   }
   
 .prose :is(h1, h2, h3, h4, h5, h6) {
